Small opening book file path fix, should work on windows now.